src/main/java/application/dataset/test/invalidRandomAddresses/todo/hard/completedIncorrectly/RandomAddressesWithTwoWrongRandomFields.java
package application.dataset.test.invalidRandomAddresses.todo.hard.completedIncorrectly;

public class RandomAddressesWithTwoWrongRandomFields {
    // se aleg fieldurile in functie de nr random generat

    // prima adresa din file ar fi pt extragerea datelor pt fieldurile extrase. acestea s ar insera intr o alta adresa
}
